--- a/src/assets/css/styles.module.css
+++ b/src/assets/css/styles.module.css
@@ -23,12 +23,14 @@ body {
 }
 
 .banner{
-  width: 95%;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container{
-  margin-bottom: 1.5rem;
-  font-size: large;
+  margin-bottom: 1rem;
+  font-size: medium;
   font-family: "Lato";
 }
 
@@ -36,6 +38,7 @@ body {
   margin-left: 5px; 
   margin-bottom: 5px;
   font-weight: bold;
+  font-size: x-large;
 }
 
 .tablebody{
@@ -54,7 +57,9 @@ body {
 }
 
 .searchbox{
+  margin-top: 10px;
   margin-bottom: 10px;
   justify-content: center;
   width: 100%;
 }
+
