--- a/src/assets/css/styles.module.css
+++ b/src/assets/css/styles.module.css
@@ -2,8 +2,6 @@ body {
   background-color: #ffffff;
 }
 .sidenav{
-  margin-top: 1rem;
-  margin-bottom: 3rem;
   --cui-sidebar-bg: #ffffff;
   --cui-tertiary-bg: linear-gradient(156deg,#06d3d5 30%,#2a81cb 80%);
   --cui-sidebar-nav-link-hover-color: #ffffff;
@@ -23,7 +21,7 @@ body {
 }
 
 .banner{
-  width: 100%;
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -36,13 +34,20 @@ body {
 
 .cardbody{
   margin-left: 5px; 
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   font-weight: bold;
   font-size: x-large;
 }
 
-.tablebody{
-
+.spinner{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  position: 'fixed';
+  top: 0;
+  left: 0;
 }
 
 .footer{
