--- a/src/assets/css/styles.module.css
+++ b/src/assets/css/styles.module.css
@@ -21,9 +21,10 @@ body {
 }
 
 .banner{
-  width: 85%;
+  width: 90%;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: -10px;
+  display: block;
 }
 
 .container{
