--- a/src/assets/css/styles.module.css
+++ b/src/assets/css/styles.module.css
@@ -6,7 +6,7 @@ body {
   --cui-tertiary-bg: linear-gradient(156deg,#06d3d5 30%,#2a81cb 80%);
   --cui-sidebar-nav-link-hover-color: #ffffff;
   --cui-emphasis-color: #ffffff;
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
 }
 
 .sidebarheader{
@@ -55,7 +55,7 @@ body {
   --cui-tertiary-bg: #ffffff;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
 }
 
 .sidelogo{
