--- a/src/assets/css/styles.module.css
+++ b/src/assets/css/styles.module.css
@@ -27,11 +27,18 @@ body {
   display: block;
 }
 
+.abstract{
+  margin-bottom: 1rem;
+  font-size: medium;
+  font-family: "Lato", sans-serif;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 .container{
   margin-bottom: 1rem;
   font-size: medium;
-  font-family: "Lato";
-  padding-left: 30px;
+  font-family: "Lato", sans-serif;
 }
 
 .cardbody{
