--- a/src/assets/css/styles.module.css
+++ b/src/assets/css/styles.module.css
@@ -13,6 +13,13 @@ body {
   justify-content: center;
 }
 
+.cardheader{
+  --cui-card-cap-bg: #ffffff;
+  font-size: large;
+  font-weight: bold;
+  font-family: "Lato", sans-serif;
+}
+
 .headercont{
   padding: 0;
   --cui-header-border-color: #ffffff;
